# tel

./: .gitignore  .last_input  Cargo.toml  commands.txt  daemon.sh  index.html  input.txt  run.sh  sas.sh  st.sh  status.md  telegram_login.py
.github/workflows/: pr.yml  sys.yml  tel.yml  test.yml  warp-proxy.yml
session/: cwd  env
src/: main.rs
