[package]
name = "warp-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = [
    "socks",
    "stream",
    "gzip",
    "brotli",
    "deflate",
    "http2"
] }
futures = "0.3"
base64 = "0.22"
bytes = "1"
