[package]
name = "proxy_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]

# Web framework
axum = { version = "0.7", features = ["macros"] }

# Async runtime
tokio = { version = "1.37", features = ["full"] }

# HTTP client (with streaming + socks proxy support)
reqwest = { version = "0.12", features = ["json", "stream", "socks"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"

# Async utilities
futures = "0.3"
bytes = "1"

# Concurrency map
dashmap = "5"

# UUID
uuid = { version = "1", features = ["v4"] }

# Base64 encoding
base64 = "0.22"
