[package]
name = "proxy_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "socks"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
futures = "0.3"
bytes = "1.0"
dashmap = "5.5"
uuid = { version = "1.8", features = ["v4"] }
base64 = "0.22"
http-body-util = "0.1"